Added four new cards and set TDA9887 modes for PCTV.

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.4 2004-11-27 19:30:25 atnak Exp $
+; $Id: SAA713xCards.ini,v 1.5 2004-11-28 09:38:49 atnak Exp $
 ;
 ; SAA713x card list.
 ;
@@ -110,7 +110,7 @@
 ;     Carrier = qss/intercarrier
 ;     OutputPort1 = active/inactive
 ;     OutputPort2 = active/inactive
-;     TakeoverPoint = max, min, default, 0x00 .. 0x1f
+;     TakeOverPoint = max, min, default, 0x00 .. 0x1f
 ;
 ; Just 'UseTDA9887 = yes' is also accepted.
 ;
@@ -142,7 +142,7 @@
 ; "SAA7134_AUDIO_CLOCK" while the _other program_ is showing any input.  If
 ; different inputs show a different audio clock value, use the one for the tuner
 ; input.  Ignoring the first two digits (left most) in the value shown by
-; RegSpy, the value of 187de7 means ; 32hz and 200000 means 24hz.  (SAA7130
+; RegSpy, the value of 187de7 means 32hz and 200000 means 24hz.  (SAA7130
 ; cards do not have an audio crystal and should use "none" or omit the setting.)
 ;
 ; The value for 'GPIOMask' is available at the same time 'AudioCrystal' above
@@ -162,10 +162,10 @@
 ; value used is 1 and the input is probably s-video.  Any other value is
 ; unexpected.
 ;
-; - For 'AudioPin', looking at the last digit of "SAA7134_ANALOG_IO_SELECT".
-; If it is between 0 and 2, this digit is used.  Any other value is unexpected.
-; The conversion to textual representation (although this is not necessary) is
-; 0 = "line1", 1 = "line2", 2 = "dac".
+; - For 'AudioPin', looking at the last digit of "SAA7134_ANALOG_IO_SELECT"
+; masked (bitwise AND) with 3.  If it is between 0 and 2, this digit is used.
+; Any other value is unexpected.  The conversion to textual representation
+; (although this is not necessary) is 0 = "line1", 1 = "line2", 2 = "dac".
 ;
 ; - For 'GPIOSet', 'bits' is the value of "SAA7134_GPIO_GPSTATUS" bit masked
 ; (bitwise AND) with the value of GPIOMask determined earlier.  'mask' can be
@@ -237,6 +237,7 @@ Final ()
 ;Chronos Video Shuttle II (Based on FlyVideo 2000)
 DeviceID = 0x7130
 ;Some variations of this card use differnet tuners.  E.g. Temic PAL
+;a.k.a Snazio TVPVR
 DefaultTuner = lg_tapcnew_pal
 GPIOMask = 0x0018e700
 AutoDetectID = 0x01385168
@@ -335,8 +336,7 @@ Input ( "Composite over S-Video", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 
 Input ( "Radio", radio )
@@ -510,8 +510,7 @@ Input ( "Composite", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 
 Input ( "Composite over S-Video", composite )
@@ -540,8 +539,7 @@ Input ( "Composite", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 
 Input ( "Radio", radio )
@@ -588,8 +586,7 @@ Input ( "Composite", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 
 Input ( "Radio", radio )
@@ -636,8 +633,7 @@ Input ( "Composite", composite )
 	AudioPin = line2
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line2
 
 Input ( "Radio", radio )
@@ -706,8 +702,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x0006, 0x40007 )
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 	GPIOSet( 0x0006, 0x40007 )
 
@@ -750,13 +745,21 @@ Final ()
 ;Thanks "Fabio Maione" <maione@ma...>
 ;Thanks "Dr. Uwe Zettl" <uwe.zettl@t...>
 ;Thanks "Aristarco" <aristarco@ar...>
+;Thanks "Abu Baker" <shaair@g...>
 ;Thanks "Graham Jest" <GrahamJest@ri...>
+;Thanks "Werner Meyer" <werner.meyer@ep...>
 ;Card uses specialized TDA9887 chip configuration for audio
 DeviceID = 0x7134
 DefaultTuner = mt2050_pal
 AudioCrystal = 32hz
 AutoDetectID = 0x002b11bd
-UseTDA9887 = yes
+
+UseTDA9887 ()
+	SetModes ( pal-bg ) = { intercarrier }
+	SetModes ( pal-i ) = { intercarrier }
+	SetModes ( pal-dk ) = { intercarrier }
+	; These three were tested.  Maybe other formats
+	; should be intercarrier too.  (Default is QSS.)
 
 Input ( "Tuner", tuner )
 	VideoPin = 3
@@ -790,8 +793,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x0006, 0x40007 )
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 	GPIOSet( 0x0006, 0x40007 )
 
@@ -847,8 +849,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x2000, 0x7000 )
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 	GPIOSet( 0x2000, 0x7000 )
 
@@ -876,8 +877,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x4000, 0xE000 )
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 	GPIOSet( 0x4000, 0xE000 )
 
@@ -904,8 +904,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x8080, 0x1CE780 )
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 	GPIOSet( 0x8080, 0x1CE780 )
 
@@ -930,8 +929,7 @@ Input ( "Composite", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line1
 
 Input ( "Radio", radio )
@@ -1011,8 +1009,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x4000, 0xE000 )
 
 Input ( "S-Video", svideo )
-	;(Might req mode 6)
-	VideoPin = 0
+	VideoPin = 0 ; might req mode 6
 	AudioPin = line2
 	GPIOSet( 0x4000, 0xE000 )
 
@@ -1024,7 +1021,129 @@ Final ()
 	AudioPin = dac
 	GPIOSet( 0x8000, 0xE000 )
 
-;
+
+[K-Win V-Stream Studio TV Terminator]
+;Thanks "Alex Perez" <aperez@st...>
+;This card uses the unsupported SAA7133 chip.
+;This card has a "Cable Tuner" and an "Off-Air Tuner" but
+;regspy logs did not show a difference between the two.
+;This card may use VideoPort, and various TS I/O.
+;There's no Silicon Philips TDA8275 in DScaler.
+DeviceID = 0x7133
+DefaultTuner = ;"Silicon Philips TDA8275"
+GPIOMask = 0x0038e700
+
+Input ( "Cable Tuner", tuner )
+	VideoPin = 1
+	AudioPin = line1
+	GPIOSet( 0x008000, 0x30E000 )
+
+Input ( "Off-Air Tuner", tuner )
+	VideoPin = 1
+	AudioPin = line1
+	GPIOSet( 0x008000, 0x30E000 )
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line1
+	GPIOSet( 0x008000, 0x30E000 )
+
+Input ( "S-Video", svideo )
+	VideoPin = 0
+	AudioPin = line1
+	GPIOSet( 0x008000, 0x30E000 )
+
+Input ( "Radio", radio )
+	AudioPin = line1
+	GPIOSet( 0x208000, 0x30E000 )
+
+Final ()
+	GPIOSet( 0x008000, 0x30E000 )
+
+
+[Terratec Cinergy 200 TV]
+;Thanks "Jan Kuhmann" <jan.kuhmann@we...>
+DeviceID = 0x7130
+DefaultTuner = philips_pal
+AutoDetectID = 0x1152153b
+
+Input ( "Tuner", tuner )
+	VideoPin = 1
+	AudioPin = line2
+
+Input ( "Composite", composite )
+	VideoPin = 4
+	AudioPin = line1
+
+Input ( "S-Video", svideo )
+	VideoPin = 0 ; might req mode 6
+	AudioPin = line1
+
+
+[Empire PCI TV-Radio LE]
+;Thanks "Matteo Azzali" <matte.az@li...>
+;This card may have noise problems on audio line1 if set to
+;"1.0 Vrms or less".  (Configured in Advanced Settings.)
+DeviceID = 0x7130
+DefaultTuner = philips_pal
+GPIOMask = 0x00004700
+
+Input ( "Tuner", tuner )
+	VideoPin = 1
+	AudioPin = line2
+	GPIOSet( 0x000, 0x700 )
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line1
+	GPIOSet( 0x200, 0x700 )
+
+Input ( "S-Video", svideo )
+	VideoPin = 0 ; might req mode 6
+	AudioPin = line1
+	GPIOSet( 0x200, 0x700 )
+	
+Input ( "Radio", radio )
+	AudioPin = line1
+	GPIOSet( 0x100, 0x700 )
+
+Final ()
+	AudioPin = dac
+	GPIOSet( 0x400, 0x700 )
+
+
+[AverMedia AverTV Studio 307]
+;Thanks "Abramov DA" <a6pamob@ya...>
+DeviceID = 0x7134
+DefaultTuner = philips_fm1216me_mk3
+AudioCrystal = 32Hz
+GPIOMask = 0x0c040007
+AutoDetectID = 0x97151461
+UseTDA9887 = yes
+
+Input ( "Tuner", tuner )
+	VideoPin = 1
+	AudioPin = dac
+	GPIOSet( 0x1, 0x7 )
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line1
+	GPIOSet( 0x2, 0x7 )
+
+Input ( "S-Video", svideo )
+	VideoPin = 0
+	AudioPin = line1
+	GPIOSet( 0x2, 0x7 )
+	
+Input ( "Radio", radio )
+	AudioPin = line2
+	GPIOSet( 0x1, 0x7 )
+
+Final ()
+	GPIOSet( 0x0, 0x7 )
+
+
 ; ***** Tuner list: (as at November 2004) *****
 ; absent                      0
 ; philips_pal_i               1
