Added new card AverMedia DVD EZMaker PCI.

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.5 2004-11-28 09:38:49 atnak Exp $
+; $Id: SAA713xCards.ini,v 1.6 2004-12-03 06:25:54 atnak Exp $
 ;
 ; SAA713x card list.
 ;
@@ -1142,6 +1142,23 @@ Input ( "Radio", radio )
 
 Final ()
 	GPIOSet( 0x0, 0x7 )
+
+
+[AverMedia DVD EZMaker PCI]
+;Thanks "" <renascent@c...>
+DeviceID = 0x7130
+GPIOMask = 0x00040003
+AutoDetectID = 0x10ff1461
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line1
+	GPIOSet( 0x2, 0x2 )
+
+Input ( "S-Video", svideo )
+	VideoPin = 0
+	AudioPin = line1
+	GPIOSet( 0x2, 0x2 )
 
 
 ; ***** Tuner list: (as at November 2004) *****
