--- a/DScaler/RegSpy/RegSpy.vcproj
+++ b/DScaler/RegSpy/RegSpy.vcproj
@@ -152,6 +152,9 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat">
 			<File
+				RelativePath="..\DScaler\BitVector.cpp">
+			</File>
+			<File
 				RelativePath="..\DScaler\ErrorBox.cpp">
 				<FileConfiguration
 					Name="Debug|Win32">
@@ -274,6 +277,9 @@
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl">
+			<File
+				RelativePath="..\DScaler\BitVector.h">
+			</File>
 			<File
 				RelativePath="..\RegLog\GenericCard.h">
 			</File>
