Audio crystal units were actually in MHz.

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.7 2004-12-11 21:59:41 laurentg Exp $
+; $Id: SAA713xCards.ini,v 1.8 2004-12-12 12:01:43 atnak Exp $
 ;
 ; SAA713x card list.
 ;
@@ -12,7 +12,7 @@
 ; [<card name>]
 ; DeviceID = <device id = 0x7130, 0x7134>
 ; DefaultTuner = <tuner = see below for complete list of tuner>
-; AudioCrystal = <audio crystal = none, 32kHz, 24kHz>
+; AudioCrystal = <audio crystal = none, 32MHz, 24MHz>
 ; GPIOMask = <gpio mask>
 ; AutoDetectID = <id1>, <id2>, <id3>
 ;
@@ -142,7 +142,7 @@
 ; "SAA7134_AUDIO_CLOCK" while the _other program_ is showing any input.  If
 ; different inputs show a different audio clock value, use the one for the tuner
 ; input.  Ignoring the first two digits (left most) in the value shown by
-; RegSpy, the value of 187de7 means 32kHz and 200000 means 24kHz.  (SAA7130
+; RegSpy, the value of 187de7 means 32MHz and 200000 means 24MHz.  (SAA7130
 ; cards do not have an audio crystal and should use "none" or omit the setting.)
 ;
 ; The value for 'GPIOMask' is available at the same time 'AudioCrystal' above
@@ -184,7 +184,7 @@
 [Proteus Pro [philips reference design]]
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 AutoDetectID = 0x20011131
 
 Input ( "Tuner", tuner )
@@ -201,7 +201,7 @@ Input ( "Composite", composite )
 ;Thanks "Velizar Velinov" <veli_velinov2001@ya...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 24kHz
+AudioCrystal = 24MHz
 GPIOMask = 0x0018e700
 AutoDetectID = 0x01384e42
 
@@ -276,7 +276,7 @@ Final ()
 ;out of Gerd Knorr's saa7134 v4l2 drivers
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 AutoDetectID = 0x67521131
 
 Input ( "Tuner", tuner )
@@ -298,7 +298,7 @@ Input ( "Radio", radio )
 [SKNet Monster TV]
 DeviceID = 0x7134
 DefaultTuner = philips_mk2_ntsc
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 AutoDetectID = 0x4e851131
 
 Input ( "Tuner", tuner )
@@ -321,7 +321,7 @@ Input ( "Radio", radio )
 [Tevion MD 9717]
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 24kHz
+AudioCrystal = 24MHz
 
 Input ( "Tuner", tuner )
 	VideoPin = 1
@@ -346,7 +346,7 @@ Input ( "Radio", radio )
 [KNC One TV-Station RDS]
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
-AudioCrystal = 24kHz
+AudioCrystal = 24MHz
 UseTDA9887 = yes
 
 Input ( "Tuner", tuner )
@@ -368,7 +368,7 @@ Input ( "Radio", radio )
 [Terratec Cinergy 400 TV]
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 24kHz
+AudioCrystal = 24MHz
 AutoDetectID = 0x1142153b
 
 Input ( "Tuner", tuner )
@@ -391,7 +391,7 @@ Input ( "Composite over S-Video", composite )
 [Medion 5044]
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
-AudioCrystal = 24kHz
+AudioCrystal = 24MHz
 GPIOMask = 0x00006000
 UseTDA9887 = yes
 
@@ -471,7 +471,7 @@ Input ( "S-Video", svideo )
 DeviceID = 0x7133
 ;Should be TCL2002NJ or Philips FI1286 (NTSC M-J)
 DefaultTuner = philips_fi1286_ntsc_m_j
-AudioCrystal = 24kHz
+AudioCrystal = 24MHz
 GPIOMask = 0x0018e700
 AutoDetectID = 0x01385168
 
@@ -498,7 +498,7 @@ Final ()
 ;Thanks "Michel de Glace" <mglace@my...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 24kHz
+AudioCrystal = 24MHz
 AutoDetectID = 0x1143153b
 
 Input ( "Tuner", tuner )
@@ -526,7 +526,7 @@ Input ( "Radio", radio )
 ;Thanks "Josef Schneider" <josef@ne...>
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 AutoDetectID = 0x000316be
 UseTDA9887 = yes
 
@@ -551,7 +551,7 @@ Input ( "Radio", radio )
 ;Thanks "Tom Zoerner" <tomzo@ne...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 24kHz
+AudioCrystal = 24MHz
 
 Input ( "Tuner", tuner )
 	VideoPin = 1
@@ -597,7 +597,7 @@ Input ( "Radio", radio )
 ;Thanks "Ken Chung" <kenchunghk2000@ya...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal_i
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 GPIOMask = 0x00004400
 
 Input ( "Tuner", tuner )
@@ -620,7 +620,7 @@ Input ( "S-Video", svideo )
 ;Thanks "Wolfgang Scholz" <wolfgang.scholz@ka...>
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 AutoDetectID = 0x48421043
 UseTDA9887 = yes
 
@@ -686,7 +686,7 @@ Input ( "S-Video", svideo )
 ;Thanks "Ing. Arno Pucher" <eolruin@ch...>
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 GPIOMask = 0x00040007
 AutoDetectID = 0xa70b1461
 UseTDA9887 = yes
@@ -751,7 +751,7 @@ Final ()
 ;Card uses specialized TDA9887 chip configuration for audio
 DeviceID = 0x7134
 DefaultTuner = mt2050_pal
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 AutoDetectID = 0x002b11bd
 
 UseTDA9887 ()
@@ -812,7 +812,7 @@ Final ()
 ;  Thanks Kwok Kelvin <kelvin002@ho...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 AutoDetectID = 0x4cb41019
 
 Input ( "Tuner", tuner )
@@ -889,7 +889,7 @@ Final ()
 ;Thanks "Stephen McCormick" <sdmcc@pa...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 GPIOMask = 0x001ce780
 AutoDetectID = 0xc200185b
 
@@ -918,7 +918,7 @@ Final ()
 DeviceID = 0x7134
 ;Should be LG TPI8PSB02P PAL B/G
 DefaultTuner = lg_b11d_pal
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 
 Input ( "Tuner", tuner )
 	VideoPin = 3
@@ -966,7 +966,7 @@ Input ( "S-Video", svideo )
 ;Notice this card is a SAA7134 but the DAC appears not used
 DeviceID = 0x7134
 DefaultTuner = philips_pal
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 GPIOMask = 0x0018e700
 AutoDetectID = 0x01385168
 
@@ -1116,7 +1116,7 @@ Final ()
 ;Thanks "Abramov DA" <a6pamob@ya...>
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
-AudioCrystal = 32kHz
+AudioCrystal = 32MHz
 GPIOMask = 0x0c040007
 AutoDetectID = 0x97151461
 UseTDA9887 = yes
