Minor change to Medion 7134.

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.8 2004-12-12 12:01:43 atnak Exp $
+; $Id: SAA713xCards.ini,v 1.9 2004-12-17 00:24:46 atnak Exp $
 ;
 ; SAA713x card list.
 ;
@@ -528,7 +528,11 @@ DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
 AudioCrystal = 32MHz
 AutoDetectID = 0x000316be
-UseTDA9887 = yes
+
+UseTDA9887 ()
+	SetModes ( global ) = { OutputPort2 = active }
+	;Medion 7134 uses OutputPort2 for audio AGC.
+	;Thanks "Eddy De Greef" on video4linux-list at redhat dot com
 
 Input ( "Tuner", tuner )
 	VideoPin = 1
