Added the new file Torsten created to the .Net project.

--- a/DScaler/DScaler/DScaler.vcproj
+++ b/DScaler/DScaler/DScaler.vcproj
@@ -825,6 +825,9 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\CX2388xCard_Tuner.cpp">
+			</File>
+			<File
 				RelativePath="CX2388xCard_Types.cpp">
 				<FileConfiguration
 					Name="Release|Win32">
