Added "FOTOCOM TV ONE XP" and "Compro VideoMate TV Gold Plus II".

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.9 2004-12-17 00:24:46 atnak Exp $
+; $Id: SAA713xCards.ini,v 1.10 2004-12-29 13:55:21 atnak Exp $
 ;
 ; SAA713x card list.
 ;
@@ -1163,6 +1163,88 @@ Input ( "S-Video", svideo )
 	VideoPin = 0
 	AudioPin = line1
 	GPIOSet( 0x2, 0x2 )
+
+
+[Compro VideoMate TV Gold Plus II]
+;Thanks "Ruslan" <ruslan@de...>
+;Thanks "Elshin Roman" <roxmail@li...>
+; I recieved two RegSpy logs of this card with vastly different
+; GPIO status and modes.  The first style is very similar to that
+; which is used by the non-II "Gold Plus" card also in this file.
+; It is the GPIO lines that are commented out.
+;
+; Ruslan reports that he cannot tune with his card using the "Gold
+; Plus" settings in DScaler.  His investigation found that the
+; tuner type on his card is an LG TPI8PSB02P.  (Various messages
+; boards suggest few valid substitutes for this tuner including
+; philips_pal.)
+;
+; Elshin reports that his card works in Linux using lg_tapcnew_pal.
+; The GPIO settings provided in the RegSpy logs he sent in are those
+; that are currently used.  They are untested.
+;
+; Note that this card has the same auto detect ID as the non-II
+; version of this card by the same manufacturer.
+DeviceID = 0x7134
+DefaultTuner = lg_tapcnew_pal
+AudioCrystal = 32MHz
+;GPIOMask = 0x001ce780
+GPIOMask = 0x008c1880
+AutoDetectID = 0xc200185b
+
+Input ( "Tuner", tuner )
+	VideoPin = 1
+	AudioPin = dac
+	;GPIOSet( 0xC8080, 0x1CE780 )
+	GPIOSet( 0x800000, 0x8c1880 )
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line1
+	;GPIOSet( 0xC8080, 0x1CE780 )
+	GPIOSet( 0x801000, 0x8c1880 )
+
+Input ( "S-Video", svideo )
+	VideoPin = 0 ; might req mode 6
+	AudioPin = line1
+	;GPIOSet( 0xC8080, 0x1CE780 )
+	GPIOSet( 0x800800, 0x8c1880 )
+
+Input ( "Radio", radio )
+	AudioPin = dac
+	GPIOSet( 0x880000, 0x8c1880 )
+
+Final ()
+	;GPIOSet( 0xC8000, 0x1CE780 )
+	GPIOSet( 0x840000, 0x8c1880 )
+
+
+[FOTOCOM TV ONE XP]
+;Thanks "Chousw" <chousw@ms...>
+;This card appears to use the DAC audio input even though
+;it is a SAA7130 card.
+DeviceID = 0x7130
+;DefaultTuner = tcl_2002n (not currently in dscaler)
+GPIOMask = 0x00003000
+AutoDetectID = 0x23111131
+
+Input ( "Tuner", tuner )
+	VideoPin = 1
+	AudioPin = dac
+	GPIOSet( 0x0000, 0x3000 )
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line1
+	GPIOSet( 0x2000, 0x3000 )
+
+Input ( "S-Video", svideo )
+	VideoPin = 0 ; might req mode 6
+	AudioPin = line1
+	GPIOSet( 0x2000, 0x3000 )
+
+Final ()
+	GPIOSet( 0x3000, 0x3000 )
 
 
 ; ***** Tuner list: (as at November 2004) *****
