Added TCL 2002N tuner (from v4l2)

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.1 2004-12-25 21:55:28 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.2 2004-12-29 20:17:18 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.1  2004/12/25 21:55:28  to_see
+; Changed the card list to an ini file
+;
 ;
 
 [Conexant CX23880 TV/FM EVK]
@@ -465,4 +468,5 @@ UseTDA9887 ()
 ; mt2050                      45
 ; mt2050_pal                  46
 ; philips_4in1                47
+; tcl_2002n                   48
 ;
