--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.10 2004-12-29 13:55:21 atnak Exp $
+; $Id: SAA713xCards.ini,v 1.11 2004-12-29 20:17:19 to_see Exp $
 ;
 ; SAA713x card list.
 ;
@@ -1224,7 +1224,7 @@ Final ()
 ;This card appears to use the DAC audio input even though
 ;it is a SAA7130 card.
 DeviceID = 0x7130
-;DefaultTuner = tcl_2002n (not currently in dscaler)
+DefaultTuner = tcl_2002n
 GPIOMask = 0x00003000
 AutoDetectID = 0x23111131
 
@@ -1296,4 +1296,5 @@ Final ()
 ; mt2050                      45
 ; mt2050_pal                  46
 ; philips_4in1                47
+; tcl_2002n                   48
 ;
