Added for WinFast TV2000 XP Expert Secam(L) tda9887 settings and Final()

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.2 2004-12-29 20:17:18 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.3 2005-01-13 21:03:17 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.2  2004/12/29 20:17:18  to_see
+; Added TCL 2002N tuner (from v4l2)
+;
 ; Revision 1.1  2004/12/25 21:55:28  to_see
 ; Changed the card list to an ini file
 ;
@@ -264,6 +267,7 @@ Input ( "PDI", ccir )
 ;Thanks Sorin Siron
 ;Thanks Daniel Wojcik
 ;Thanks Brian Bennefeld
+;Thanks Hervé
 AutoDetectID = 0x6611107d
 DefaultTuner = philips_fm1216me_mk3
 
@@ -279,11 +283,16 @@ Input ( "S-Video", svideo )
 	MuxSelect = 2
 	GPIOSet ( 0x00f5c700, 0x00003004, 0x00f5c700, 0x02000000 )
 
+Final ()
+	MuxSelect = 0
+	GPIOSet ( 0x00f5e704, 0x00003004, 0x00f5e704, 0x02000000 )
+
 UseTDA9887 ()
-	SetModes ( pal-bg  ) = { OutputPort1 = active, OutputPort2 = active } ; OK
-	SetModes ( pal-i   ) = { OutputPort1 = active, OutputPort2 = active } ; ???
-	SetModes ( pal-dk  ) = { OutputPort1 = active, OutputPort2 = active } ; OK
-	SetModes ( ntsc-m  ) = { intercarrier, OutputPort1 = active }         ; ???
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active } ; OK
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active } ; ???
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active } ; OK
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }         ; ???
+	SetModes ( secam-l  ) = { OutputPort2 = active }                       ; OK
 
 
 [Leadtek WinFast TV2000 XP Expert (Ntsc)]
@@ -303,11 +312,16 @@ Input ( "S-Video", svideo )
 	MuxSelect = 2
 	GPIOSet ( 0x00f5c700, 0x00003004, 0x00f5c700, 0x02000000 )
 
+Final ()
+	MuxSelect = 0
+	GPIOSet ( 0x00f5e704, 0x00003004, 0x00f5e704, 0x02000000 )
+
 UseTDA9887 ()
-	SetModes ( pal-bg  ) = { OutputPort1 = active, OutputPort2 = active } ; OK
-	SetModes ( pal-i   ) = { OutputPort1 = active, OutputPort2 = active } ; ???
-	SetModes ( pal-dk  ) = { OutputPort1 = active, OutputPort2 = active } ; OK
-	SetModes ( ntsc-m  ) = { intercarrier, OutputPort1 = active }         ; ???
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active } ; OK
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active } ; ???
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active } ; OK
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }         ; ???
+	SetModes ( secam-l  ) = { OutputPort2 = active }                       ; OK
 
 
 [ATI TV Wonder Pro]
@@ -405,9 +419,9 @@ Input ( "S-Video", svideo )
 	MuxSelect = 2
 	GPIOSet ( 0x000000ff, 0x0000e05f, 0x000000d1 )
 
-;Final ()
-;	MuxSelect = 0
-;	GPIOSet ( 0x000000ff, 0x000020ff, 0x000000d1 )
+Final ()
+	MuxSelect = 0
+	GPIOSet ( 0x000000ff, 0x000020ff, 0x000000d1 )
 
 UseTDA9887 ()
 	SetModes ( pal-bg  ) = { OutputPort1 = active, OutputPort2 = active } ; ???
