Added new cards "Medion MD42073" and "V-Stream Xpert-TV PVR-7134".

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.11 2004-12-29 20:17:19 to_see Exp $
+; $Id: SAA713xCards.ini,v 1.12 2005-02-26 01:29:13 atnak Exp $
 ;
 ; SAA713x card list.
 ;
@@ -1245,6 +1245,72 @@ Input ( "S-Video", svideo )
 
 Final ()
 	GPIOSet( 0x3000, 0x3000 )
+
+
+[Medion MD-42073]
+;Thanks "Jeffrey Willemsen" <detox@wa...>
+;This card is exactly the same as the "Medion MD-2819"
+;card that is also in this file except it doesn't have
+;the constant 0x4 bit set in the GPIO.  This entry might
+;not be necessary.
+DeviceID = 0x7134
+DefaultTuner = philips_fm1216me_mk3
+AudioCrystal = 32MHz
+GPIOMask = 0x00040003
+AutoDetectID = 0xa70b1461
+UseTDA9887 = yes
+
+Input ( "Tuner", tuner )
+	VideoPin = 1
+	AudioPin = dac
+	GPIOSet( 0x0002, 0x40003 )
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line1
+	GPIOSet( 0x0002, 0x40003 )
+
+Input ( "S-Video", svideo )
+	VideoPin = 0 ; might req mode 6
+	AudioPin = line1
+	GPIOSet( 0x0002, 0x40003 )
+
+Input ( "Radio", radio )
+	AudioPin = line1
+	GPIOSet( 0x0001, 0x40003 )
+
+Final ()
+	GPIOSet( 0x0000, 0x40003 )
+
+
+[V-Stream Xpert-TV PVR-7134]
+;Thanks "Adam Kodish" <adam.kodish@nt...>
+DeviceID = 0x7134
+DefaultTuner = philips_pal_i
+AudioCrystal = 32MHz
+GPIOMask = 0x0700
+
+Input ( "Tuner", tuner )
+	VideoPin = 1
+	AudioPin = dac
+	GPIOSet( 0x000, 0x700 )
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line1
+	GPIOSet( 0x200, 0x700 )
+
+Input ( "S-Video", svideo )
+	VideoPin = 0 ; might req mode 6
+	AudioPin = line1
+	GPIOSet( 0x200, 0x700 )
+
+Input ( "Radio", radio )
+	AudioPin = line1
+	GPIOSet( 0x100, 0x700 )
+
+Final ()
+	GPIOSet( 0x000, 0x700 )
 
 
 ; ***** Tuner list: (as at November 2004) *****
