Added some tuner

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.3 2005-01-13 21:03:17 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.4 2005-03-06 13:15:06 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.3  2005/01/13 21:03:17  to_see
+; Added for WinFast TV2000 XP Expert Secam(L) tda9887 settings and Final()
+;
 ; Revision 1.2  2004/12/29 20:17:18  to_see
 ; Added TCL 2002N tuner (from v4l2)
 ;
@@ -431,7 +434,7 @@ UseTDA9887 ()
 
 
 
-; ***** Tuner list: (as at November 2004) *****
+; ***** Tuner list: (as at March 2005) *****
 ; auto                        -2
 ; setup                       -1
 ; absent                      0
@@ -483,4 +486,14 @@ UseTDA9887 ()
 ; mt2050_pal                  46
 ; philips_4in1                47
 ; tcl_2002n                   48
+; hitachi_ntsc				  49
+; philips_pal_mk			  50
+; philips_fm1236_mk3		  51
+; lg_ntsc_tape				  52
+; tnf_8831bgff				  53
+; philips_fm1256_ih3		  54
+; philips_fq1286			  55
+; lg_pal_tape				  56
+; philips_fm1216me			  57
+; philips_fq1236a_mk4		  58
 ;
