--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.12 2005-02-26 01:29:13 atnak Exp $
+; $Id: SAA713xCards.ini,v 1.13 2005-03-06 13:15:06 to_see Exp $
 ;
 ; SAA713x card list.
 ;
@@ -1313,7 +1313,9 @@ Final ()
 	GPIOSet( 0x000, 0x700 )
 
 
-; ***** Tuner list: (as at November 2004) *****
+; ***** Tuner list: (as at March 2005) *****
+; auto                        -2
+; setup                       -1
 ; absent                      0
 ; philips_pal_i               1
 ; philips_ntsc                2
@@ -1363,4 +1365,14 @@ Final ()
 ; mt2050_pal                  46
 ; philips_4in1                47
 ; tcl_2002n                   48
+; hitachi_ntsc				  49
+; philips_pal_mk			  50
+; philips_fm1236_mk3		  51
+; lg_ntsc_tape				  52
+; tnf_8831bgff				  53
+; philips_fm1256_ih3		  54
+; philips_fq1286			  55
+; lg_pal_tape				  56
+; philips_fm1216me			  57
+; philips_fq1236a_mk4		  58
 ;
