Added new Cards: GDI Black Gold, IODATA GV-VCP3/PCI, IODATA GV/BCTV7E

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.4 2005-03-06 13:15:06 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.5 2005-03-06 17:04:28 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.4  2005/03/06 13:15:06  to_see
+; Added some tuner
+;
 ; Revision 1.3  2005/01/13 21:03:17  to_see
 ; Added for WinFast TV2000 XP Expert Secam(L) tda9887 settings and Final()
 ;
@@ -252,6 +255,7 @@ Final ()
     MuxSelect = 1
     GPIOSet ( 0x0000ff04 )
 
+UseTDA9887 ()
 
 [PixelView XCapture With PDI Mod]
 DefaultTuner = absent
@@ -432,6 +436,54 @@ UseTDA9887 ()
 	SetModes ( pal-dk  ) = { OutputPort1 = active, OutputPort2 = active } ; OK
 	SetModes ( ntsc-m  ) = { intercarrier }                               ; ???
 
+[GDI Black Gold]
+;from v4l2
+AutoDetectID = 0x010614c7, 0x010614c7
+DefaultTuner = absent
+
+Input ( "Composite1", composite )
+	MuxSelect = 0
+
+Input ( "Composite2", composite )
+	MuxSelect = 1
+
+Input ( "S-Video",    svideo )
+	MuxSelect = 2
+
+
+[IODATA GV-VCP3/PCI]
+;from v4l2
+AutoDetectID = 0xd00310fc
+DefaultTuner = absent
+
+Input ( "Composite1", composite )
+	MuxSelect = 0
+
+Input ( "Composite2", composite )
+	MuxSelect = 1
+
+Input ( "S-Video",    svideo )
+	MuxSelect = 2
+
+
+[IODATA GV/BCTV7E]
+;from v4l2
+AutoDetectID = 0xd03510fc
+DefaultTuner = philips_fq1286
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000e03f )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000e07f )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000e07f )
+
+UseTDA9887 ()
 
 
 ; ***** Tuner list: (as at March 2005) *****
